<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image to PWL</string>
    <string name="button_change_image">Change</string>
    <string name="button_send_image">Send</string>
    <string name="act_weather_forecast">Weather Forecast</string>
    <string name="act_send_image">Send Image</string>
    <string name="act_settings">Settings</string>
    <string name="act_help">Help</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_device_name">Device name</string>
    <string name="hint_ip_address">IP Address</string>
    <string name="hint_post_code">Postcode</string>

    <string name="button_start_weather_forecast">Start Weather Forecast</string>
    <string name="button_stop_weather_forecast">Stop Weather Forecast</string>
    <string name="dialog_message">Test message for the changeImageClick dialog</string>
    <string name="dialog_title">title for changeImageClick</string>


    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="postal_address_hint">postcode</string>

    <string name="pref_user_name_title_text">Input user name</string>
    <string name="pref_user_name_summary_text">KaeduITUser</string>
    <string name="pref_user_name_dlg_text">Enter user name</string>

    <string name="pref_device_name_title_text">Input device name</string>
    <string name="pref_device_name_summary_text">KaeduITDevice</string>
    <string name="pref_device_name_dlg_text">Enter device name</string>

    <string name="pref_ip_address_title_text">Input IP address</string>
    <string name="pref_ip_address_summary_text">192.168.1.144</string>
    <string name="pref_ip_address_dlg_text">Enter IP address</string>

    <string name="pref_user_name_default">KaeduITUser</string>
    <string name="pref_device_name_default">KaeduITDevice</string>
    <string name="pref_ip_address_default">192.168.1.144</string>


</resources>
