<?xml version="1.0" encoding="utf-8"?>

<fragment xmlns:android="http://schemas.android.com/apk/res/android"
          xmlns:map="http://schemas.android.com/apk/res-auto"
          android:id="@+id/map"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:name="com.google.android.gms.maps.MapFragment"
          map:cameraBearing="112.5"
          map:cameraTargetLat="-33.796923"
          map:cameraTargetLng="150.922433"
          map:cameraTilt="30"
          map:cameraZoom="13"
          map:mapType="normal"
          map:uiCompass="false"
          map:uiRotateGestures="true"
          map:uiScrollGestures="false"
          map:uiTiltGestures="true"
          map:uiZoomControls="false"
          map:uiZoomGestures="true" >


<EditText
        android:id="@+id/postal_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/postal_address_hint"
        android:inputType="textPostalAddress|textCapWords|textNoSuggestions" />

<Button
        android:id="@+id/buttonStartForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/postal_code"
        android:layout_alignParentLeft="true"
        android:text="@string/button_start_weather_forecast"
        android:background="@drawable/gradient_box"
        android:onClick="startForecastClick"/>

<Button
        android:id="@+id/buttonStopForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/postal_code"
        android:layout_alignParentRight="true"
        android:text="@string/button_stop_weather_forecast"
        android:background="@drawable/gradient_box"
        android:onClick="stopForecastClick"/>

 </fragment>